[metadata]
name = zomake
version = 0.1.0
author = Isaac Yee
author_email = isaac.cl.yee@gmail.com
description = A C/C++ build system that generates Makefiles.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IY314/zomake
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
